src/components/character/character.css
/* ... */
.drawbacktextArea {
    left: 20px;
    width: 426px;
    max-width: 426px;
    min-width: 426px;
    max-height: 62px;
    min-height: 62px;
    text-indent: 122px;
    overflow: hidden;
}

.statsShell {
    position: absolute;
    top: 147px;
    left: 20px;
    width: 127px;
}

.pageBase h1 {
    background: #990000;
    color: white;
    margin: 0;
    padding-left: 10px;
    font-size: 15px;
}

.pageBase h2 {
    background: #222;
    color: white;
    margin: 0;
    text-align: center;
    font-size: 13px;
    font-family: 'Vollkorn SC', serif;
    height: 19.6px;
}

.statRowsShell div, .movementRowsSell div {
    display: flex;
    justify-content: space-between;
}

.statRowsShell div:nth-child(even), .movementRowsSell div:nth-child(even), .vitalShell div:nth-child(even),
.rangeShell div:nth-child(odd) {
    background: lightgray;
}

.movementRowsSell div div:nth-child(even) {
    background: inherit;
}

.statRowsShell p, .movementRowsSell p, .stressThresholdShell p, .stressThresholdShell input, .rangeShell p, .rangeShell input,
.socialShell p, .socialShell input, .skillShell p, .skillShell input, .cashAndGearShell p, .cashAndGearShell input, .baseCombatStatsShell p,
.armorBlockShell p, .armorBlockShell input, .shieldBlockShell p, .shieldBlockShell input, .weaponProfileShell p,
.weaponProfileShell input, .statsShell input, .movementShell input, .vitalsShell input, .combatSkills p, .combatSkills input {
    position: unset !important;
    z-index: 1;
    margin: 0;
    min-height: 19.6px;
}

.statRowsShell div div, .statRowsShell div p, .statRowsShell div input {
    width: 50%;
    text-align: center;
}

.statRowsShell p:nth-child(2) {
    font-family: 'Vollkorn SC', serif;
    font-weight: bold;
    margin-top: 2px
}

#confDieShell {
    width: 48px;
    position: relative;
}

#confDieShell p {
    position: absolute !important;
}

#confDieShell p:nth-child(2) {
    color: lightgray;
    z-index: 0;
    font-size: 9px;
    top: 2px;
    left: 2px;
}

.statRowsShell div:nth-child(even) #confDieShell p:nth-child(2) {
    color: whitesmoke
}

.strLocation {
    left: 20px;
    top: 171px;
    width: 48px;
    text-align: center;
}

.strConfrontationLocation {
    width: 48px;
    text-align: center;
}

.strCarryLocation {
    left: 713px;
    top: 488px;
    width: 80px;
    text-align: center;
}

.shownGearCarryLocation {
    left: 621px;
    top: 488px;
    width: 80px;
    text-align: center;
}

.dexLocation {
    left: 20px;
    top: 192px;
    width: 48px;
    text-align: center;
}

.dexConfrontationLocation {
    width: 48px;
    text-align: center;
}

.baseCombatStatsShell {
    position: absolute;
    top: 532px;
    left: 187px;
    width: 177px;
}

.baseCombatStatsShell div {
    display: flex;
    justify-content: space-between;
}

.baseCombatStatsShell div p:first-child {
    font-family: 'Vollkorn SC', serif;
    font-weight: bold;
    width: 61px;
    padding: 2px 5px 0;
}

.baseCombatStatsShell div p:last-child {
    width: 116px;
    text-align: center;
}

.baseCombatStatsShell div:nth-child(odd) {
    background: lightgray
}

.baseCombatStatsShell div div {
    position: relative;
}

.baseCombatStatsShell div div p:first-child {
    position: absolute !important;
    width: 116px;
    text-align: center;
    font-weight: normal;
    font-size: 10px;
    padding-top: 3px;
    color: white
}

.baseCombatStatsShell div:nth-child(even) div p:first-child {
    color: lightgray
}

.conLocation {
    left: 20px;
    top: 213px;
    width: 48px;
    text-align: center;
}

.conConfrontationLocation {
    width: 48px;
    text-align: center;
}

.intLocation {
    left: 20px;
    top: 234px;
    width: 48px;
    text-align: center;
}

.intConfrontationLocation {
    width: 48px;
    text-align: center;
}

.wisLocation {
    left: 20px;
    top: 255px;
    width: 48px;
    text-align: center;
}

.wisConfrontationLocation {
    width: 48px;
    text-align: center;
}

.chaLocation {
    left: 20px;
    top: 276px;
    width: 48px;
    text-align: center;
}

.chaConfrontationLocation {
    width: 48px;
    text-align: center;
}

.movementShell {
    position: absolute;
    top: 147px;
    left: 170px;
    width: 276px;
}

.movementShell div p:first-child, .lengthShell {
    font-family: 'Vollkorn SC', serif;
    margin-top: 2px
}

.movementShell div p:first-child {
    padding-left: 5px;
    width: 50px;
}

.lengthShell p:first-child {
    width: unset !important;
    margin-top: 0
}

.lengthShell {
    width: 173px;
}

.crawlLocation {
    width: 48px;
    text-align: center;
}

.crawlLengthLocation {
    width: 48px;
}

.walkLocation {
    width: 48px;
    text-align: center;
}

.walkLengthLocation {
    width: 48px;
}

.jogLocation {
    width: 48px;
    text-align: center;
}

.jogLengthLocation {
    width: 48px;
}

.runLocation {
    width: 48px;
    text-align: center;
}

.runLengthLocation {
    background: #f1f1f1;
    width: 153px;
}

.sprintLocation {
    width: 48px;
    text-align: center;
}

.sprintLengthLocation {
    background: white;
    width: 153px;
}

.crawlStrike {
    top: 33px;
    width: 153px;
}

.walkStrike {
    top: 56px;
    width: 153px;
}

.jogStrike {
    top: 80px;
    width: 153px;
}

.runStrike {
    top: 104px;
}

.sprintStrike {
    top: 128px;
}

.strikeThrough {
    position: absolute;
    height: 3px;
    background: #990000 !important;
}

.honorLocation {
    left: 20px;
    top: 342px;
    width: 48px;
    text-align: center;
}

.temperamentLocation {
    left: 20px;
    top: 383px;
    width: 182px;
    background-color: lightgray;
}

strong {
    font-size: 12px;
    font-family: 'Vollkorn SC', serif;
}

.racial-temp-edit-shell {
    display: flex;
    width: 200px;
    background-color: lightgray;
}

p.temperamentLocation {
    width: 213px;
}

.racial-temp-edit-shell strong {
    margin-top: 4px;
    margin-right: 4px;
}

.extrahonordiceLocation {
    left: 418px;
    top: 342px;
    width: 28px;
    text-align: center;
}
/* ... */

